<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="capture_button">Capture Button</string>
    <string name="title_activity_map_">Map_Activity</string>
    <string name="title_activity_picture_confirmation">Picture Confirmation</string>
    <string name="app_name">Put A Bird On It!</string>
    <string name="action_settings">Settings</string>
    <string name="action_activity">Add Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="formTitle">Bird Sighting Form</string>
    <string name="birdName">Bird Name:</string>
    <string name="scientificName">Scientific Name:</string>
    <string name="gpsText">Coordinates:</string>
    <string name="noteText">Notes:</string>
    <string name="categoryText">Category:</string>
    <string name="activityText">Activity:</string>
    <string name="addAudioText">Add Audio</string>
    <string name="addPictureText">Add Picture</string>
    <string name="submitButtonText">Submit</string>
    <string name="birdNameHint">Enter Bird Name</string>
    <string name="scientificNameHint">Enter Scientific Name</string>
    <string name="latitudeTitle">Latitude:</string>
    <string name="longitudeTitle">Longitude:</string>
    <string name="notesHint">Enter Notes</string>
    <string name="camera">Camera Title</string>
    <string name="dateText">Date:</string>
    <string name="map">Map</string>
    <string name="timeText">Time:</string>
    <string name="autofillCheckBox">Autofill?</string>
    <string name="addActivityTitleText">Add an Activity</string>
    <string name="nameActivityText">Name of Activity:</string>
    <string name="saveButton">Save</string>
    <string name="addActivityCheckBox">Add Another?</string>
    <string name="addActivityPageTitle">Add an Activity</string>
    <string name="addActivityPageSubtitle">Name:</string>
    <string name="addActivityNameHint">Type Name Here</string>
    <string name="addActivitySaveButton">Save</string>
    <string name="submitButton">Submit A Sighting</string>
    <string name="reviewRecords">Review Past Sightings</string>
    <string name="map_settings">Map Settings</string>
    <string name="map_type">Map Type:</string>
    <string name="retake_button">Retake Picture</string>
    <string name="preference_file_key">com.catalyst.android.birdapp.PreferenceFile</string>
    <string name="commonNameTitle">Common Name</string>
    <string name="categoryTitle">Category</string>
    <string name="dateTimeTitle">Date</string>
    
    <string-array name="map_types_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
        <item>@string/terrain</item>
        <item>@string/hybrid</item>
    </string-array>

    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>

    <string-array name="category_drop_down_choices" />
    <string-array name="bird_acivity_dropdown_choices" />
    <string-array name="am_pm_choices">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_add_new">New Activity</string>
    <string name="GPS_off">GPS is turned OFF</string>
    <string name="would_you_like_to_activate_GPS">Would you like to activate the GPS?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="location_unavailable">GPS Location Unavailable</string>
    <string name="your_location_is_unavailable">GPS will not be used for location.</string>
    <string name="flying">Flying</string>
    <string name="swimming">Swimming</string>
    <string name="hunting">Hunting</string>
    <string name="mating">Mating</string>
    <string name="not_applicable">N/A</string>
    <string name="nest">Nest</string>
    <string name="sighting">Sighting</string>
    <string name="misc">Misc</string>
    <string name="coordinates_not_available">Coordinates not available</string>
    <string name="sightingAddedBlankName">Your Sighting Has Been Saved.</string>
    <string name="activityPrompt">Select the Observed Activity</string>
    <string name="categoryPrompt">Select the Desired Category</string>
    <string name="app_bird_form">Bird Sighting</string>
    <string name="emptyFieldsWarning">Do you want to submit a sighting without</string>
    <string name="alert">Alert!!!</string>
    <string name="coordinateOutOfDate">Coordinates are out-of-date</string>
    <string name="coordinates_up_to_date">Coordinates are up-to-date.</string>
    <string name="camera_activity_title">Camera</string>
    <string name="camera_capture_button">Capture</string>
    <string name="current_location">Current Location</string>
    <string name="title_activity_main">Put A Bird On It!!</string>
    <string name="title_activity_records">Bird Sightings List</string>
    <string name="invalid">Invalid</string>
    <string name="my_location">My Location</string>
    <string name="bird_name_alpha_error">Bird name must be alpha characters only!</string>
    <string name="scientific_name_alpha_error">Scientific name must be alpha characters only!</string>
    <string name="activity_alpha_error">Activities must be alpha characters only!</string>
    <string name="activity_already_exists_error">Activity already exists!</string>
    <string name="add_activity_empty">You forgot to enter an activity!</string>
    <string name="or"> or </string>
    <string name="alert_dismissed">Alert dismissed</string>
    <string name="sighting_will_be_submitted">Sighting will be submitted</string>
    <string name="camera_settings">Camera Settings</string>
    <string name="title_activity_camera_settings">CameraSettingsActivity</string>
    <string name = "zoom_title">Zoom:</string>
    <string name = "white_balance_title">White Balance:</string>
    <string name = "resolution_title">Resolution:</string>
    <string name = "picture_size_title">Preview Size:</string>
    <string name = "restore_defaults">Restore Defaults</string>
    <string name = "save_button">Save</string>
    <string name = "camera_settings_title">Camera Settings</string>
    <string name = "map_settings_title">Map Settings</string>
    <string name = "edit_form_activity_title">Edit Form</string>
    <string name = "save_changes">Save Changes</string>
    <string name = "sighting_deleted">Bird sighting has been deleted!</string>
    <string name = "delete_sighting_title">Delete Sighting?</string>
    <string name = "delete_sighting_confirmation">Are you sure that you want to delete this sighting?</string>
    
    <string name = "bird_form_settings">Bird Sighting Settings</string>
    <string name = "gps_title">Allow GPS to be used</string>
    <string name = "gps_off_text">Prompting for GPS has been disabled.  To reactivate this feature, go to Settings</string>
    <string name = "deleteButtonText">Delete</string>
    <string name = "invalidLatitude">Latitude must be between -90 and 90</string>
    <string name = "invalidLongitude">Longitude must be between -180 and 180</string>
    
    <string-array name="resolution_settings">
        <item>640 X 480</item>
        <item>800 X 480</item>
    </string-array>
    <string-array name="zoom_settings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="whitebalance_settings">
        <item>Auto</item>
        <item>Daylight</item>
        <item>Cloudy</item>
        <item>Fluorescent</item>
        <item>Incadescent</item>
    </string-array>
    <string-array name="picture_size_settings">
        <item>None</item>
    </string-array>
    <string name="bird_picture_description">Picture of the bird sighting.</string>
    
    <string name="aboutUsTitle">About Us</string>
    <string name="aboutUsHeading">Catalyst IT Services</string>
    <string name="aboutUsAddress">www.CatalystITServices.com</string>
    <string name="aboutUsAddressUrl">http://www.CatalystITServices.com</string>
    <string name="aboutUsContactButton">Contact Us</string>
    <string name="aboutUsContactEmail">info@catalystITservices.com</string>
    <string name="aboutUsContactSubject">Information request from BirdApp</string>
    <string name="aboutUsBlurb1">Catalyst’s mobility work has ranged from helping develop one of the leading mobile advertising platforms to extensive iPad and iPhone development for a Fortune 500 consumer products company. Our deep expertise with Agile development and support is exceptionally well suited to mobile development and mobile product engineering.</string>
    <string name="aboutUsBlurb2">Catalyst also does deep mobility work in systems designed to give business users and consumers real-time access to data and control over that information. From mobile portals to improving supply chain operations for a major defense contractor to e-commerce systems for a mid-market consumer products company, Catalyst is the partner of choice because of our deep mobile solutions experience and recognized Agile execution aptitude.</string>
    <string name="aboutUsDevelopersHeading">Developers:</string>
    <string name="aboutUsTestersHeading">Testers:</string>
    <string name="aboutUsScrumMastersHeading">Scrum Masters:</string>
    <string name="aboutUsProductOwnersHeading">Product Owners:</string>
    <string-array name="aboutUsDevelopers">
        <item>Randy M.</item>
        <item>Hannah Y.</item>
        <item>Judy C.</item>
        <item>Ian P.</item>
        <item>Justin D.</item>
        <item>Brandon D.</item>
        <item>Michael H.</item>
    </string-array>
    <string-array name="aboutUsTesters">
        <item>Anna B.</item>
    </string-array>
    <string-array name="aboutUsScrumMasters">
        <item>Sam L.</item>
        <item>Les G.</item>
    </string-array>
    <string-array name="aboutUsProductOwners">
        <item>Paul W.</item>
        <item>Adam K.</item>
        <item>Adam B.</item>
    </string-array>
    
</resources>
