<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddNewActivity" >

    <CheckBox
        android:id="@+id/add_another_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/addActivityCheckBox" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/page_subtitle"
        android:layout_below="@+id/add_another_button"
        android:layout_marginTop="28dp"
        android:text="@string/addActivitySaveButton" />

    <EditText
        android:id="@+id/activityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/addActivityNameHint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/addActivityPageTitle"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/page_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/addActivityPageSubtitle"
        android:textSize="20sp" />

</RelativeLayout>
