<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form_background"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".BirdFormActivity" >

        <TextView
            android:id="@+id/formTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/formTitle"
            android:textColor="#000000"
            android:textSize="22sp"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/common_name_edit_text"
            style="@style/textHintColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/submit_button"
            android:layout_below="@+id/formTitle"
            android:layout_marginTop="26dp"
            android:layout_toRightOf="@+id/scientificName"
            android:ems="10"
            android:hint="@string/birdNameHint"
            android:inputType="textPersonName"
            android:maxLength="75" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/birdName"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/scientificName"
            android:layout_below="@+id/common_name_edit_text"
            android:layout_marginTop="21dp"
            android:layout_toLeftOf="@+id/common_name_edit_text"
            android:text="@string/scientificName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/scientific_name_edit_text"
            style="@style/textHintColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/common_name_edit_text"
            android:layout_alignRight="@+id/common_name_edit_text"
            android:layout_alignTop="@+id/birdName"
            android:ems="10"
            android:hint="@string/scientificNameHint"
            android:inputType="textPersonName"
            android:maxLength="55" />

        <EditText
            android:id="@+id/notes_edit_text"
            style="@style/textHintColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/scientific_name_edit_text"
            android:layout_alignRight="@+id/scientific_name_edit_text"
            android:layout_below="@+id/scientific_name_edit_text"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/notesHint"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/submit_button"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/picture_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/black_button"
            android:onClick="checkFieldsAndNotifyUserOfBlanksBeforeSubmission"
            android:text="@string/submitButtonText" />

        <Button
            android:id="@+id/picture_button"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/activity_text"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/bird_acivity_dropdown"
            android:layout_marginTop="25dp"
            android:background="@drawable/black_button"
            android:text="@string/addPictureText" />

        <TextView
            android:id="@+id/scientificName"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/common_name_edit_text"
            android:layout_alignBottom="@+id/common_name_edit_text"
            android:layout_alignParentLeft="true"
            android:text="@string/birdName"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/noteText"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/notes_edit_text"
            android:layout_alignBottom="@+id/notes_edit_text"
            android:layout_alignLeft="@+id/birdName"
            android:text="@string/noteText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/time_title"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/dateText"
            android:layout_below="@+id/date_time_edit_text"
            android:layout_marginTop="14dp"
            android:text="@string/timeText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date_time_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/category_drop_down"
            android:layout_alignTop="@+id/dateText"
            android:ems="10"
            android:maxLength="11"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dateText"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/noteText"
            android:layout_below="@+id/notes_edit_text"
            android:layout_marginTop="34dp"
            android:text="@string/dateText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/hour_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/date_time_edit_text"
            android:layout_alignTop="@+id/time_title"
            android:ems="10"
            android:maxLength="10"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/activity_text"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/category_text"
            android:layout_below="@+id/category_drop_down"
            android:layout_marginTop="15dp"
            android:text="@string/activityText"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/bird_acivity_dropdown"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/hour_edit_text"
            android:layout_alignTop="@+id/activity_text"
            android:layout_marginBottom="30dp"
            android:prompt="@string/activityPrompt"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/category_drop_down"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/category_text"
            android:layout_toRightOf="@+id/category_text"
            android:prompt="@string/categoryPrompt"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/audio_button"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/picture_button"
            android:layout_alignBottom="@+id/picture_button"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@+id/bird_acivity_dropdown"
            android:background="@drawable/black_button"
            android:text="@string/addAudioText" />

        <TextView
            android:id="@+id/latitude_title"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/category_text"
            android:layout_alignTop="@+id/latitude_edit_text"
            android:text="@string/latitudeTitle"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/longitude_text"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/noteText"
            android:layout_below="@+id/latitude_title"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="18dp"
            android:text="@string/longitudeTitle"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/latitude_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/notes_edit_text"
            android:layout_alignRight="@+id/refresh_button"
            android:layout_below="@+id/hour_edit_text"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:maxLength="30"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/category_text"
            style="@style/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/submit_button"
            android:layout_below="@+id/refresh_button"
            android:layout_marginTop="19dp"
            android:text="@string/categoryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/longitude_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/latitude_edit_text"
            android:layout_alignRight="@+id/refresh_button"
            android:layout_alignTop="@+id/longitude_text"
            android:ems="10"
            android:maxLength="30"
            android:textSize="18sp" />

        <Button
            android:id="@+id/refresh_button"
            style="@style/CoordinateButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/longitude_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:background="@drawable/coordinate_button_red"
            android:text="@string/coordinateOutOfDate" />
    </RelativeLayout>

</ScrollView>