<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordsActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/table_padding"
        android:paddingBottom="@dimen/table_padding"
        android:background="@color/aero" >

        <TextView
            android:id="@+id/commonNameTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/commonNameTitle"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/categoryTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/categoryTitle"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/dateTimeTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="@dimen/capture_button_height"
            android:text="@string/dateTimeTitle"
            android:textColor="@color/black" />
    </TableRow>
    
    <TableRow
        android:id="@+id/lineRow"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<View
			android:id="@+id/line1"
			android:layout_width="match_parent"
			android:layout_height="1dip"
			android:layout_weight="1"
			android:background="#FF909090"
			android:padding="2dip" />
	</TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
	
	    <ScrollView
	        android:id="@+id/sightingScrollView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >
	
	        <TableLayout
	            android:id="@+id/birdSightingTableLayout"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	        </TableLayout>
	    </ScrollView>
	</TableRow>
</TableLayout>
